// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing ProfileDeleteModal.component.js Show modal deleting form 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProfileDeleteModal
    hasDeleteError={false}
    isDeleted={false}
    isDeleting={false}
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div
        className="delete-modal"
      >
        <div
          className="delete-modal--image"
        >
          <img
            src={undefined}
          />
          <span
            className="delete-modal--mark"
          />
        </div>
        <h1
          className="danger"
        >
          Du er ved at slette din profil
        </h1>
        <p>
          Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.
        </p>
        <p>
          Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.
        </p>
        <div
          className="delete-modal--btn-wrapper"
        >
          <button
            className="rounded-button rounded-button--secondary"
            onClick={[Function]}
          >
            Stop! Slet ikke min profil
          </button>
          <button
            className="rounded-button rounded-button--danger"
            onClick={[Function]}
          >
            Slet min profil
          </button>
        </div>
      </div>,
      "onClose": [Function],
      "title": "Slet Profil",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="delete-modal--image"
          >
            <img
              src={undefined}
            />
            <span
              className="delete-modal--mark"
            />
          </div>,
          <h1
            className="danger"
          >
            Du er ved at slette din profil
          </h1>,
          <p>
            Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.
          </p>,
          <p>
            Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.
          </p>,
          <div
            className="delete-modal--btn-wrapper"
          >
            <button
              className="rounded-button rounded-button--secondary"
              onClick={[Function]}
            >
              Stop! Slet ikke min profil
            </button>
            <button
              className="rounded-button rounded-button--danger"
              onClick={[Function]}
            >
              Slet min profil
            </button>
          </div>,
        ],
        "className": "delete-modal",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                src={undefined}
              />,
              <span
                className="delete-modal--mark"
              />,
            ],
            "className": "delete-modal--image",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "src": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "delete-modal--mark",
              },
              "ref": null,
              "rendered": null,
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Du er ved at slette din profil",
            "className": "danger",
          },
          "ref": null,
          "rendered": "Du er ved at slette din profil",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.",
          },
          "ref": null,
          "rendered": "Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.",
          },
          "ref": null,
          "rendered": "Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <button
                className="rounded-button rounded-button--secondary"
                onClick={[Function]}
              >
                Stop! Slet ikke min profil
              </button>,
              <button
                className="rounded-button rounded-button--danger"
                onClick={[Function]}
              >
                Slet min profil
              </button>,
            ],
            "className": "delete-modal--btn-wrapper",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Stop! Slet ikke min profil",
                "className": "rounded-button rounded-button--secondary",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Stop! Slet ikke min profil",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Slet min profil",
                "className": "rounded-button rounded-button--danger",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Slet min profil",
              "type": "button",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="delete-modal"
        >
          <div
            className="delete-modal--image"
          >
            <img
              src={undefined}
            />
            <span
              className="delete-modal--mark"
            />
          </div>
          <h1
            className="danger"
          >
            Du er ved at slette din profil
          </h1>
          <p>
            Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.
          </p>
          <p>
            Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.
          </p>
          <div
            className="delete-modal--btn-wrapper"
          >
            <button
              className="rounded-button rounded-button--secondary"
              onClick={[Function]}
            >
              Stop! Slet ikke min profil
            </button>
            <button
              className="rounded-button rounded-button--danger"
              onClick={[Function]}
            >
              Slet min profil
            </button>
          </div>
        </div>,
        "onClose": [Function],
        "title": "Slet Profil",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="delete-modal--image"
            >
              <img
                src={undefined}
              />
              <span
                className="delete-modal--mark"
              />
            </div>,
            <h1
              className="danger"
            >
              Du er ved at slette din profil
            </h1>,
            <p>
              Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.
            </p>,
            <p>
              Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.
            </p>,
            <div
              className="delete-modal--btn-wrapper"
            >
              <button
                className="rounded-button rounded-button--secondary"
                onClick={[Function]}
              >
                Stop! Slet ikke min profil
              </button>
              <button
                className="rounded-button rounded-button--danger"
                onClick={[Function]}
              >
                Slet min profil
              </button>
            </div>,
          ],
          "className": "delete-modal",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <img
                  src={undefined}
                />,
                <span
                  className="delete-modal--mark"
                />,
              ],
              "className": "delete-modal--image",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "src": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "delete-modal--mark",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Du er ved at slette din profil",
              "className": "danger",
            },
            "ref": null,
            "rendered": "Du er ved at slette din profil",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.",
            },
            "ref": null,
            "rendered": "Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.",
            },
            "ref": null,
            "rendered": "Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="rounded-button rounded-button--secondary"
                  onClick={[Function]}
                >
                  Stop! Slet ikke min profil
                </button>,
                <button
                  className="rounded-button rounded-button--danger"
                  onClick={[Function]}
                >
                  Slet min profil
                </button>,
              ],
              "className": "delete-modal--btn-wrapper",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Stop! Slet ikke min profil",
                  "className": "rounded-button rounded-button--secondary",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Stop! Slet ikke min profil",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Slet min profil",
                  "className": "rounded-button rounded-button--danger",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Slet min profil",
                "type": "button",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Testing ProfileDeleteModal.component.js Show modal deleting form 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProfileDeleteModal
    hasDeleteError={false}
    isDeleted={false}
    isDeleting={true}
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div
        className="delete-modal"
      >
        <div
          className="delete-modal--image"
        >
          <img
            src={undefined}
          />
          <span
            className="delete-modal--mark"
          />
        </div>
        <h1
          className="danger"
        >
          Du er ved at slette din profil
        </h1>
        <p>
          Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.
        </p>
        <p>
          Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.
        </p>
        <div
          className="delete-modal--btn-wrapper"
        >
          <button
            className="rounded-button rounded-button--secondary"
            onClick={[Function]}
          >
            Stop! Slet ikke min profil
          </button>
          <button
            className="rounded-button rounded-button--danger"
            onClick={[Function]}
          >
            Slet min profil
          </button>
        </div>
      </div>,
      "onClose": [Function],
      "title": "Slet Profil",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="delete-modal--image"
          >
            <img
              src={undefined}
            />
            <span
              className="delete-modal--mark"
            />
          </div>,
          <h1
            className="danger"
          >
            Du er ved at slette din profil
          </h1>,
          <p>
            Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.
          </p>,
          <p>
            Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.
          </p>,
          <div
            className="delete-modal--btn-wrapper"
          >
            <button
              className="rounded-button rounded-button--secondary"
              onClick={[Function]}
            >
              Stop! Slet ikke min profil
            </button>
            <button
              className="rounded-button rounded-button--danger"
              onClick={[Function]}
            >
              Slet min profil
            </button>
          </div>,
        ],
        "className": "delete-modal",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                src={undefined}
              />,
              <span
                className="delete-modal--mark"
              />,
            ],
            "className": "delete-modal--image",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "src": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "delete-modal--mark",
              },
              "ref": null,
              "rendered": null,
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Du er ved at slette din profil",
            "className": "danger",
          },
          "ref": null,
          "rendered": "Du er ved at slette din profil",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.",
          },
          "ref": null,
          "rendered": "Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.",
          },
          "ref": null,
          "rendered": "Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <button
                className="rounded-button rounded-button--secondary"
                onClick={[Function]}
              >
                Stop! Slet ikke min profil
              </button>,
              <button
                className="rounded-button rounded-button--danger"
                onClick={[Function]}
              >
                Slet min profil
              </button>,
            ],
            "className": "delete-modal--btn-wrapper",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Stop! Slet ikke min profil",
                "className": "rounded-button rounded-button--secondary",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Stop! Slet ikke min profil",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Slet min profil",
                "className": "rounded-button rounded-button--danger",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Slet min profil",
              "type": "button",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="delete-modal"
        >
          <div
            className="delete-modal--image"
          >
            <img
              src={undefined}
            />
            <span
              className="delete-modal--mark"
            />
          </div>
          <h1
            className="danger"
          >
            Du er ved at slette din profil
          </h1>
          <p>
            Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.
          </p>
          <p>
            Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.
          </p>
          <div
            className="delete-modal--btn-wrapper"
          >
            <button
              className="rounded-button rounded-button--secondary"
              onClick={[Function]}
            >
              Stop! Slet ikke min profil
            </button>
            <button
              className="rounded-button rounded-button--danger"
              onClick={[Function]}
            >
              Slet min profil
            </button>
          </div>
        </div>,
        "onClose": [Function],
        "title": "Slet Profil",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="delete-modal--image"
            >
              <img
                src={undefined}
              />
              <span
                className="delete-modal--mark"
              />
            </div>,
            <h1
              className="danger"
            >
              Du er ved at slette din profil
            </h1>,
            <p>
              Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.
            </p>,
            <p>
              Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.
            </p>,
            <div
              className="delete-modal--btn-wrapper"
            >
              <button
                className="rounded-button rounded-button--secondary"
                onClick={[Function]}
              >
                Stop! Slet ikke min profil
              </button>
              <button
                className="rounded-button rounded-button--danger"
                onClick={[Function]}
              >
                Slet min profil
              </button>
            </div>,
          ],
          "className": "delete-modal",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <img
                  src={undefined}
                />,
                <span
                  className="delete-modal--mark"
                />,
              ],
              "className": "delete-modal--image",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "src": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "delete-modal--mark",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Du er ved at slette din profil",
              "className": "danger",
            },
            "ref": null,
            "rendered": "Du er ved at slette din profil",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.",
            },
            "ref": null,
            "rendered": "Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.",
            },
            "ref": null,
            "rendered": "Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="rounded-button rounded-button--secondary"
                  onClick={[Function]}
                >
                  Stop! Slet ikke min profil
                </button>,
                <button
                  className="rounded-button rounded-button--danger"
                  onClick={[Function]}
                >
                  Slet min profil
                </button>,
              ],
              "className": "delete-modal--btn-wrapper",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Stop! Slet ikke min profil",
                  "className": "rounded-button rounded-button--secondary",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Stop! Slet ikke min profil",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Slet min profil",
                  "className": "rounded-button rounded-button--danger",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Slet min profil",
                "type": "button",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Testing ProfileDeleteModal.component.js Show modal deleting form 3`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProfileDeleteModal
    hasDeleteError={false}
    isDeleted={true}
    isDeleting={false}
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div
        className="delete-modal"
      >
        <h1
          className="danger"
        >
          Din profil er nu slettet
        </h1>
        <p>
          Vi håber at du vender tilbage en dag. Klik på log ud og luk din browser for at logge ud af UNI-login.
        </p>
        <div
          className="btn-wrapper"
        >
          <a
            className="rounded-button rounded-button--secondary"
            href="/logout"
          >
            Log ud
          </a>
        </div>
      </div>,
      "onClose": [Function],
      "title": "Slet Profil",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="danger"
          >
            Din profil er nu slettet
          </h1>,
          <p>
            Vi håber at du vender tilbage en dag. Klik på log ud og luk din browser for at logge ud af UNI-login.
          </p>,
          <div
            className="btn-wrapper"
          >
            <a
              className="rounded-button rounded-button--secondary"
              href="/logout"
            >
              Log ud
            </a>
          </div>,
        ],
        "className": "delete-modal",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Din profil er nu slettet",
            "className": "danger",
          },
          "ref": null,
          "rendered": "Din profil er nu slettet",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Vi håber at du vender tilbage en dag. Klik på log ud og luk din browser for at logge ud af UNI-login.",
          },
          "ref": null,
          "rendered": "Vi håber at du vender tilbage en dag. Klik på log ud og luk din browser for at logge ud af UNI-login.",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              className="rounded-button rounded-button--secondary"
              href="/logout"
            >
              Log ud
            </a>,
            "className": "btn-wrapper",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Log ud",
              "className": "rounded-button rounded-button--secondary",
              "href": "/logout",
            },
            "ref": null,
            "rendered": "Log ud",
            "type": "a",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="delete-modal"
        >
          <h1
            className="danger"
          >
            Din profil er nu slettet
          </h1>
          <p>
            Vi håber at du vender tilbage en dag. Klik på log ud og luk din browser for at logge ud af UNI-login.
          </p>
          <div
            className="btn-wrapper"
          >
            <a
              className="rounded-button rounded-button--secondary"
              href="/logout"
            >
              Log ud
            </a>
          </div>
        </div>,
        "onClose": [Function],
        "title": "Slet Profil",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1
              className="danger"
            >
              Din profil er nu slettet
            </h1>,
            <p>
              Vi håber at du vender tilbage en dag. Klik på log ud og luk din browser for at logge ud af UNI-login.
            </p>,
            <div
              className="btn-wrapper"
            >
              <a
                className="rounded-button rounded-button--secondary"
                href="/logout"
              >
                Log ud
              </a>
            </div>,
          ],
          "className": "delete-modal",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Din profil er nu slettet",
              "className": "danger",
            },
            "ref": null,
            "rendered": "Din profil er nu slettet",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Vi håber at du vender tilbage en dag. Klik på log ud og luk din browser for at logge ud af UNI-login.",
            },
            "ref": null,
            "rendered": "Vi håber at du vender tilbage en dag. Klik på log ud og luk din browser for at logge ud af UNI-login.",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                className="rounded-button rounded-button--secondary"
                href="/logout"
              >
                Log ud
              </a>,
              "className": "btn-wrapper",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Log ud",
                "className": "rounded-button rounded-button--secondary",
                "href": "/logout",
              },
              "ref": null,
              "rendered": "Log ud",
              "type": "a",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Testing ProfileDeleteModal.component.js Show modal deleting form 4`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProfileDeleteModal
    hasDeleteError={true}
    isDeleted={false}
    isDeleting={false}
    onClose={[MockFunction]}
    onConfirm={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <div
        className="delete-modal"
      >
        <div
          className="delete-modal--image"
        >
          <img
            src={undefined}
          />
          <span
            className="delete-modal--mark"
          />
        </div>
        <h1
          className="danger"
        >
          Du er ved at slette din profil
        </h1>
        <p>
          Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.
        </p>
        <p>
          Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.
        </p>
        <div
          className="delete-modal--btn-wrapper"
        >
          <button
            className="rounded-button rounded-button--secondary"
            onClick={[Function]}
          >
            Stop! Slet ikke min profil
          </button>
          <button
            className="rounded-button rounded-button--danger"
            onClick={[Function]}
          >
            Slet min profil
          </button>
        </div>
      </div>,
      "onClose": [Function],
      "title": "Slet Profil",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="delete-modal--image"
          >
            <img
              src={undefined}
            />
            <span
              className="delete-modal--mark"
            />
          </div>,
          <h1
            className="danger"
          >
            Du er ved at slette din profil
          </h1>,
          <p>
            Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.
          </p>,
          <p>
            Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.
          </p>,
          <div
            className="delete-modal--btn-wrapper"
          >
            <button
              className="rounded-button rounded-button--secondary"
              onClick={[Function]}
            >
              Stop! Slet ikke min profil
            </button>
            <button
              className="rounded-button rounded-button--danger"
              onClick={[Function]}
            >
              Slet min profil
            </button>
          </div>,
        ],
        "className": "delete-modal",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                src={undefined}
              />,
              <span
                className="delete-modal--mark"
              />,
            ],
            "className": "delete-modal--image",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "src": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "delete-modal--mark",
              },
              "ref": null,
              "rendered": null,
              "type": "span",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Du er ved at slette din profil",
            "className": "danger",
          },
          "ref": null,
          "rendered": "Du er ved at slette din profil",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.",
          },
          "ref": null,
          "rendered": "Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.",
          },
          "ref": null,
          "rendered": "Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.",
          "type": "p",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <button
                className="rounded-button rounded-button--secondary"
                onClick={[Function]}
              >
                Stop! Slet ikke min profil
              </button>,
              <button
                className="rounded-button rounded-button--danger"
                onClick={[Function]}
              >
                Slet min profil
              </button>,
            ],
            "className": "delete-modal--btn-wrapper",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Stop! Slet ikke min profil",
                "className": "rounded-button rounded-button--secondary",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Stop! Slet ikke min profil",
              "type": "button",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Slet min profil",
                "className": "rounded-button rounded-button--danger",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Slet min profil",
              "type": "button",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <div
          className="delete-modal"
        >
          <div
            className="delete-modal--image"
          >
            <img
              src={undefined}
            />
            <span
              className="delete-modal--mark"
            />
          </div>
          <h1
            className="danger"
          >
            Du er ved at slette din profil
          </h1>
          <p>
            Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.
          </p>
          <p>
            Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.
          </p>
          <div
            className="delete-modal--btn-wrapper"
          >
            <button
              className="rounded-button rounded-button--secondary"
              onClick={[Function]}
            >
              Stop! Slet ikke min profil
            </button>
            <button
              className="rounded-button rounded-button--danger"
              onClick={[Function]}
            >
              Slet min profil
            </button>
          </div>
        </div>,
        "onClose": [Function],
        "title": "Slet Profil",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="delete-modal--image"
            >
              <img
                src={undefined}
              />
              <span
                className="delete-modal--mark"
              />
            </div>,
            <h1
              className="danger"
            >
              Du er ved at slette din profil
            </h1>,
            <p>
              Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.
            </p>,
            <p>
              Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.
            </p>,
            <div
              className="delete-modal--btn-wrapper"
            >
              <button
                className="rounded-button rounded-button--secondary"
                onClick={[Function]}
              >
                Stop! Slet ikke min profil
              </button>
              <button
                className="rounded-button rounded-button--danger"
                onClick={[Function]}
              >
                Slet min profil
              </button>
            </div>,
          ],
          "className": "delete-modal",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <img
                  src={undefined}
                />,
                <span
                  className="delete-modal--mark"
                />,
              ],
              "className": "delete-modal--image",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "src": undefined,
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "delete-modal--mark",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Du er ved at slette din profil",
              "className": "danger",
            },
            "ref": null,
            "rendered": "Du er ved at slette din profil",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.",
            },
            "ref": null,
            "rendered": "Hvis du sletter din profil, sletter du alt, hvad du har lavet på Biblo.",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.",
            },
            "ref": null,
            "rendered": "Du kan altså ikke få din profil tilbage, men du kan altid oprette en ny profil på et andet tidspunkt.",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="rounded-button rounded-button--secondary"
                  onClick={[Function]}
                >
                  Stop! Slet ikke min profil
                </button>,
                <button
                  className="rounded-button rounded-button--danger"
                  onClick={[Function]}
                >
                  Slet min profil
                </button>,
              ],
              "className": "delete-modal--btn-wrapper",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Stop! Slet ikke min profil",
                  "className": "rounded-button rounded-button--secondary",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Stop! Slet ikke min profil",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Slet min profil",
                  "className": "rounded-button rounded-button--danger",
                  "onClick": [Function],
                },
                "ref": null,
                "rendered": "Slet min profil",
                "type": "button",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Testing ProfileDeleteModal.component.js Show modal form 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProfileDelete
    onDelete={[MockFunction]}
    profile={
      Object {
        "UI": Object {
          "submitProgress": 0,
          "submitState": "",
        },
        "birthday": null,
        "created": "2016-03-10T09:20:28.744Z",
        "description": null,
        "displayName": "Bobby",
        "displayNameExists": false,
        "email": null,
        "errors": Array [],
        "favoriteLibrary": Object {
          "libraryId": "714700",
        },
        "fullName": null,
        "hasFilledInProfile": true,
        "id": 109,
        "image": Object {
          "commentImageCollection": null,
          "groupCoverImageCollectionId": null,
          "id": 43,
          "postImageCollection": null,
          "profileImageCollection": 109,
          "url": Object {
            "large": "/billede/43/large",
            "medium": "/billede/43/medium",
            "small": "/billede/43/small",
          },
        },
        "imageFile": null,
        "isModerator": false,
        "lastUpdated": "2016-03-10T09:20:28.744Z",
        "phone": null,
        "submitProgress": 0,
        "submitState": "",
        "userIsLoggedIn": true,
        "userMessages": Object {
          "messages": Array [],
          "unreadMessages": 0,
        },
        "username": "jona341k",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        "",
        <div
          className="delete--link"
        >
          <a
            href="#delete"
            onClick={[Function]}
          >
            Slet profil
          </a>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      "",
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <a
            href="#delete"
            onClick={[Function]}
          >
            Slet profil
          </a>,
          "className": "delete--link",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Slet profil",
            "href": "#delete",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Slet profil",
          "type": "a",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "",
          <div
            className="delete--link"
          >
            <a
              href="#delete"
              onClick={[Function]}
            >
              Slet profil
            </a>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              href="#delete"
              onClick={[Function]}
            >
              Slet profil
            </a>,
            "className": "delete--link",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Slet profil",
              "href": "#delete",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Slet profil",
            "type": "a",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Testing ProfileDeleteModal.component.js Show modal form 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ProfileDelete
    onDelete={[MockFunction]}
    profile={
      Object {
        "UI": Object {
          "submitProgress": 0,
          "submitState": "",
        },
        "birthday": null,
        "created": "2016-03-10T09:20:28.744Z",
        "description": null,
        "displayName": "Bobby",
        "displayNameExists": false,
        "email": null,
        "errors": Array [],
        "favoriteLibrary": Object {
          "libraryId": "714700",
        },
        "fullName": null,
        "hasFilledInProfile": true,
        "id": 109,
        "image": Object {
          "commentImageCollection": null,
          "groupCoverImageCollectionId": null,
          "id": 43,
          "postImageCollection": null,
          "profileImageCollection": 109,
          "url": Object {
            "large": "/billede/43/large",
            "medium": "/billede/43/medium",
            "small": "/billede/43/small",
          },
        },
        "imageFile": null,
        "isModerator": false,
        "lastUpdated": "2016-03-10T09:20:28.744Z",
        "phone": null,
        "submitProgress": 0,
        "submitState": "",
        "userIsLoggedIn": true,
        "userMessages": Object {
          "messages": Array [],
          "unreadMessages": 0,
        },
        "username": "jona341k",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <ProfileDeleteModal
          hasError={undefined}
          imageUrl="/billede/43/small"
          isDeleted={undefined}
          isDeleting={undefined}
          onClose={[Function]}
          onConfirm={[Function]}
        />,
        <div
          className="delete--link"
        >
          <a
            href="#delete"
            onClick={[Function]}
          >
            Slet profil
          </a>
        </div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "hasError": undefined,
          "imageUrl": "/billede/43/small",
          "isDeleted": undefined,
          "isDeleting": undefined,
          "onClose": [Function],
          "onConfirm": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <a
            href="#delete"
            onClick={[Function]}
          >
            Slet profil
          </a>,
          "className": "delete--link",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Slet profil",
            "href": "#delete",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Slet profil",
          "type": "a",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ProfileDeleteModal
            hasError={undefined}
            imageUrl="/billede/43/small"
            isDeleted={undefined}
            isDeleting={undefined}
            onClose={[Function]}
            onConfirm={[Function]}
          />,
          <div
            className="delete--link"
          >
            <a
              href="#delete"
              onClick={[Function]}
            >
              Slet profil
            </a>
          </div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "hasError": undefined,
            "imageUrl": "/billede/43/small",
            "isDeleted": undefined,
            "isDeleting": undefined,
            "onClose": [Function],
            "onConfirm": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              href="#delete"
              onClick={[Function]}
            >
              Slet profil
            </a>,
            "className": "delete--link",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Slet profil",
              "href": "#delete",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Slet profil",
            "type": "a",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
